tests/snapshots/errors/index_on_non_array.mc
let x = 42;
print($"{x[0]}");
